# JCN9000

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.de.md  README.md  pyproject.toml
data/: README.md
docs/: architecture.de.md  architecture.md  glossar.md  karten_werte_staerke.xlsx  next_training_round.md  regeln.md  training_runbook_mcts3.md  web_app_update_v0.5.0.md  web_app_update_v0.7.0.md  web_app_update_v0.7.1.md  web_app_update_v0.7.2.md  web_app_update_v0.8.0.md  web_app_update_v0.8.1.md  web_app_update_v0.8.2.md  web_app_update_v0.9.0.md  web_app_update_v0.9.1.md  web_app_update_v0.9.2.md
evaluation/: __init__.py  batched_bodensee_eval.py  batched_eval.py  batched_solo_eval.py  bodensee_eval.py  compare_players.py  elo.py  run_bodensee_eval.py  run_eval.py  run_solo_eval.py  solo_eval.py  solo_stats.py  stats.py  tournament.py
jass_engine/: __init__.py  card.py  deck.py  game.py  player.py  round.py  rules.py  trick.py  variant.py  void_inference.py  weis.py
models/: README.md
players/: __init__.py  bodensee_heuristic_player.py  bodensee_player.py  bodensee_random_player.py  forced_announcement_player.py  heuristic_player.py  nn_player.py  random_player.py  solo_heuristic_player.py
scripts/: add_tfjs_to_release.py  benchmark.py  benchmark_mp.py  build_release_zip.py  demo_bodensee.py  eval_heuristic_void_rule.py  generate_bodensee_encoding_fixtures.py  generate_encoding_fixtures.py  generate_jass_rules_json.py  make_release.py  probe_lead_sweep.py  probe_unten_lead.py  throughput_test.py  tune_bodensee_announce.py  tune_heuristic_announce.py  tune_solo_announce.py
spec/: bodensee_state_encoding.md  jass_rules.json  jass_rules.schema.json  state_encoding.md
tests/: test_announce_scales.py  test_bodensee_deal.py  test_bodensee_determinization.py  test_bodensee_encoder.py  test_bodensee_fixtures.py  (+23 more)
(+65 files in other folders)
